<<<<<<< Updated upstream
[gd_scene format=3 uid="uid://dmmrlmxp8takm"]
=======
[gd_scene load_steps=2 format=3 uid="uid://bx3cmd2vajxk6"]

[ext_resource type="Script" uid="uid://4c4ab56c3ebr" path="res://packaging_option.gd" id="1_webwf"]
>>>>>>> Stashed changes

[node name="Packaging_Option" type="VBoxContainer"]
offset_right = 250.0
offset_bottom = 43.0
<<<<<<< Updated upstream
=======
script = ExtResource("1_webwf")
>>>>>>> Stashed changes

[node name="OptionLabel" type="Label" parent="."]
layout_mode = 2
text = "Eco Packaging"
horizontal_alignment = 1

[node name="Slider" type="HSlider" parent="."]
layout_mode = 2

[node name="Percent" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="EcoPercent" type="Label" parent="Percent"]
custom_minimum_size = Vector2(142.965, 0)
layout_mode = 2
text = "+X% eco"

[node name="ProfitPercent" type="Label" parent="Percent"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "+X% profit"
horizontal_alignment = 2

[connection signal="changed" from="Slider" to="." method="_on_slider_changed"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
